# Music-Player-App

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  songs.txt
docs/: Part1.md  Part2.md  Part3.md  Part4.md  final_report.md
include/controller/: MusicPlayer.hpp  StatisticsManager.hpp
include/model/: MusicLibrary.hpp  PlayNextQueue.hpp  PlaybackHistory.hpp  PlaybackQueue.hpp  PlaylistLibrary.hpp  ShuffleManager.hpp  SmartPlaylist.hpp  Song.hpp  Utils.hpp
include/view/: PersonalView.hpp  PlaylistView.hpp  mainwindow.hpp
resources/: resources.qrc
src/controller/: MusicPlayer.cpp  StatisticsManager.cpp
src/model/: MusicLibrary.cpp  PlayNextQueue.cpp  PlaybackHistory.cpp  PlaybackQueue.cpp  PlaylistLibrary.cpp  ShuffleManager.cpp  SmartPlaylist.cpp  Utils.cpp
src/view/: MainWindow.ui  PersonalView.cpp  PersonalView.ui  PlaylistView.cpp  PlaylistView.ui  main.cpp  mainwindow.cpp
tests/: CMakeLists.txt  tst_MusicPlayer.cpp
